--- a/templates/email/contacto.html.twig
+++ b/templates/email/contacto.html.twig
@@ -3,11 +3,15 @@
 {% extends 'layout/email.html.twig' %}
 
 {% block body %}
-    <h3 style="font-weight: normal;margin: 10px 0;">{{ nombre }}</h3>
-    <h4 style="font-weight: normal;margin: 10px 0;">{{ titulo }}</h4>
+    <h3 style="font-weight: normal;margin: 10px 0;">Nombre: {{ nombre }}</h3>
+    <h4 style="font-weight: normal;margin: 10px 0;">Asunto:     {{ titulo }}</h4>
+    
     <hr style="border: none; border-top: solid 1px #d1d1d1;"/>
     <p>
         {# El pipe "nl2br" escapa espacios, saltos de lineas, etc, para que el correo llegue como se escribio realmente #}
         {{ mensaje  | nl2br}}
+        <br />
+        <br />
+        <span style="font-size: .7em">Fecha de envio: {{date() | date("Y-m-d")}}</span>
     </p>
 {% endblock %}
