Add 12 months to filter

--- a/templates/front/portada.html.twig
+++ b/templates/front/portada.html.twig
@@ -28,6 +28,7 @@
                         <option value="-60 day">{{ 'ultimos.60.dias' | trans }}</option>
                         <option value="-3 month">{{ 'ultimos.3.meses' | trans }}</option>
                         <option value="-6 month">{{ 'ultimos.6.meses' | trans }}</option>
+                        <option value="-12 month">{{ 'ultimos.12.meses' | trans }}</option>
                     </select>
                 </form>
 
@@ -53,6 +54,7 @@
                         <option value="-60 day">{{ 'ultimos.60.dias' | trans }}</option>
                         <option value="-3 month">{{ 'ultimos.3.meses' | trans }}</option>
                         <option value="-6 month">{{ 'ultimos.6.meses' | trans }}</option>
+                        <option value="-12 month">{{ 'ultimos.12.meses' | trans }}</option>
                     </select>
                 </form>
 
