--- a/templates/vehiculo/filtro.html.twig
+++ b/templates/vehiculo/filtro.html.twig
@@ -5,8 +5,7 @@
  #}
 
 {# Si no llegan marcas muestro cartel de que no existen vehiculos ya que es el criterio de busqueda mas general #}
-{% if marcas | length == 0 %}
-
+{% if marcas | length == 0 and vehiculo == null %}
 <h2 class="texto-grande">{{'no.hay.resultados' | trans}}</h2>
 <hr>
 
