Edit Uri to publicity images and Change the year of vehicle in the table

--- a/templates/front/portada.html.twig
+++ b/templates/front/portada.html.twig
@@ -69,12 +69,11 @@
             <div class="col-lg-1 col-md-2 publicidad">
                 {# Aqui se cargan las publicidades con este formato #}
 
-                {# TODO: estas publicidades estan de ejemplo, poner imagen real y Url a la que va real #}
-                <a href="http://direccion.com" target="_blank">
+                <a href="https://ftp.cubahosting.net/index.php" target="_blank">
                     <img src="{{ asset('img/publicidad/ByFtp-Opt.png') }}" alt="ByFtp-Opt"/>
                 </a>
 
-                <a href="http://direccion.com" target="_blank">
+                <a href="http://cubahosting.net/" target="_blank">
                     <img src="{{ asset('img/publicidad/WebHosting-Opt.png') }}" alt="WebHosting-Opt"/>
                 </a>
 
