--- a/templates/vehiculo/filtro.html.twig
+++ b/templates/vehiculo/filtro.html.twig
@@ -5,41 +5,43 @@
  #}
 
 {# Si no llegan marcas muestro cartel de que no existen vehiculos ya que es el criterio de busqueda mas general #}
-{% if marcas | length == 0 and vehiculo == null %}
-<h2 class="texto-grande">{{'no.hay.resultados' | trans}}</h2>
-<hr>
+{% if vehiculo is not defined %}
+    {% if marcas | length == 0 %}
+    <h2 class="texto-grande">{{'no.hay.resultados' | trans}}</h2>
+    <hr>
 
-{% else %}
+    {% else %}
 
-<div class="filtroVehiculos">
-    <form id="form_busqueda_vehiculos" method="post" action="{{ path('busquedaVehiculos') }}">
-        <select name="marca_vehiculo" id="marca_vehiculo">
-            {% if vehiculo is defined %}
-                <option value="{{ vehiculo.marca.id }}">{{ vehiculo.marca.name }}</option>
-            {% else %}
-                <option value="-1">{{ 'marca' | trans }}</option>
-            {% endif %}
-            {% for marca in marcas %}
-            <option value="{{ marca.id }}">{{ marca.name }}</option>
-            {% endfor %}
-        </select>
+    <div class="filtroVehiculos">
+        <form id="form_busqueda_vehiculos" method="post" action="{{ path('busquedaVehiculos') }}">
+            <select name="marca_vehiculo" id="marca_vehiculo">
+                {% if vehiculo is defined %}
+                    <option value="{{ vehiculo.marca.id }}">{{ vehiculo.marca.name }}</option>
+                {% else %}
+                    <option value="-1">{{ 'marca' | trans }}</option>
+                {% endif %}
+                {% for marca in marcas %}
+                <option value="{{ marca.id }}">{{ marca.name }}</option>
+                {% endfor %}
+            </select>
 
-        <select name="tipo_vehiculo" id="tipo_vehiculo" disabled>
-            <option value="-1">{{ 'tipo' | trans }}</option>
-        </select>
+            <select name="tipo_vehiculo" id="tipo_vehiculo" disabled>
+                <option value="-1">{{ 'tipo' | trans }}</option>
+            </select>
 
-        <select name="modelo_vehiculo" id="modelo_vehiculo" disabled>
-            <option value="-1">{{ 'modelo' | trans }}</option>
-        </select>
+            <select name="modelo_vehiculo" id="modelo_vehiculo" disabled>
+                <option value="-1">{{ 'modelo' | trans }}</option>
+            </select>
 
-        <select name="anno_vehiculo" id="anno_vehiculo" disabled>
-            <option value="-1">{{ 'anno' | trans }}</option>
-        </select>
+            <select name="anno_vehiculo" id="anno_vehiculo" disabled>
+                <option value="-1">{{ 'anno' | trans }}</option>
+            </select>
 
-        <button class="btn btn-primary" id="btnBuscarVehiculos" disabled>
-            <i class="fa fa-search"></i> {{ 'buscar' | trans }}
-        </button>
-    </form>
-</div>
+            <button class="btn btn-primary" id="btnBuscarVehiculos" disabled>
+                <i class="fa fa-search"></i> {{ 'buscar' | trans }}
+            </button>
+        </form>
+    </div>
 
+    {% endif %}
 {% endif %}
