Improve language manage (dynamic) and add banner images

--- a/templates/inc/carousel.html.twig
+++ b/templates/inc/carousel.html.twig
@@ -6,6 +6,9 @@
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
         <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="6"></li>
     </ol>
 
     <!-- imagenes del carousel -->
@@ -14,13 +17,22 @@
             <img src="{{ asset('img/carousel/Banner-Opt.png') }}" alt="Banner-Opt">
         </div>
         <div class="item">
-            <img src="{{ asset('img/carousel/Banner-Opt.png') }}" alt="Banner-Opt">
+            <img src="{{ asset('img/carousel/unnamed-1.png') }}" alt="unnamed-1">
         </div>
         <div class="item">
-            <img src="{{ asset('img/carousel/Banner-Opt.png') }}" alt="Banner-Opt">
+            <img src="{{ asset('img/carousel/unnamed-2.png') }}" alt="unnamed-2">
         </div>
         <div class="item">
-            <img src="{{ asset('img/carousel/Banner-Opt.png') }}" alt="Banner-Opt">
+            <img src="{{ asset('img/carousel/unnamed-3.png') }}" alt="unnamed-3">
+        </div>
+        <div class="item">
+            <img src="{{ asset('img/carousel/unnamed-4.png') }}" alt="unnamed-4">
+        </div>
+        <div class="item">
+            <img src="{{ asset('img/carousel/unnamed-5.png') }}" alt="unnamed-5">
+        </div>
+        <div class="item">
+            <img src="{{ asset('img/carousel/unnamed-6.png') }}" alt="unnamed-6">
         </div>
     </div>
 
