--- a/templates/vehiculo/tabla.html.twig
+++ b/templates/vehiculo/tabla.html.twig
@@ -48,7 +48,7 @@
                     {% endif %}
                 </p>
             </td>
-            <td>{{ vehiculo.datos.fechaInicio | date('Y') }}</td>
+            <td>{{ vehiculo.datos.fechaInicio }}</td>
         </tr>
         {% endfor %}
     </tbody>
