--- a/templates/layout/programa.html.twig
+++ b/templates/layout/programa.html.twig
@@ -6,20 +6,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+{% set grupo = app.request.get('grupo') %}
     <div class="menus-programa">
-        <a class="menu-programa" href="{{ path('program', { 'grupo': 'configuracion' }) }}" id="menu-configuracion">
+        <a class="menu-programa{% if grupo == 'configuracion' %} activo{% endif %}" href="{{ path('program', { 'grupo': 'configuracion' }) }}" id="menu-configuracion">
             <img src="{{ asset('img/menu_programa/configuracion.jpg') }}" alt=""/>
             <span>{{ 'menu.configuracion' | trans }}</span>
         </a>
-        <a class="menu-programa" href="{{ path('program', { 'grupo': 'archivos' }) }}" id="menu-configuracion">
+        <a class="menu-programa{% if grupo == 'archivos' %} activo{% endif %}" href="{{ path('program', { 'grupo': 'archivos' }) }}" id="menu-configuracion">
             <img src="{{ asset('img/menu_programa/archivos.jpg') }}" alt=""/>
             <span>{{ 'menu.archivos' | trans }}</span>
         </a>
-        <a class="menu-programa" href="{{ path('program', { 'grupo': 'facturacion' }) }}" id="menu-configuracion">
+        <a class="menu-programa{% if grupo == 'facturacion' %} activo{% endif %}" href="{{ path('program', { 'grupo': 'facturacion' }) }}" id="menu-configuracion">
             <img src="{{ asset('img/menu_programa/facturacion.jpg') }}" alt=""/>
             <span>{{ 'menu.facturacion' | trans }}</span>
         </a>
-        <a class="menu-programa" href="{{ path('program', { 'grupo': 'herramientas' }) }}" id="menu-configuracion">
+        <a class="menu-programa{% if grupo == 'herramientas' %} activo{% endif %}" href="{{ path('program', { 'grupo': 'herramientas' }) }}" id="menu-configuracion">
             <img src="{{ asset('img/menu_programa/herramientas.jpg') }}" alt=""/>
             <span>{{ 'menu.herramientas' | trans }}</span>
         </a>
