--- a/templates/programa/configuracion/registro_vehiculos.html.twig
+++ b/templates/programa/configuracion/registro_vehiculos.html.twig
@@ -13,12 +13,40 @@
 
     {# Poner el HTML deseado a mostrar #}
 
-    <h2>Registro vehiculos</h2>
-    <h3>Ejemplo de como seria la pagina (configurable)</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias ipsam quod, praesentium ab harum explicabo veritatis id? Itaque reprehenderit provident ea eaque magnam voluptas quas quia voluptatum iure nam. Culpa? Lorem</p>
-    <p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nemo impedit natus dignissimos, suscipit aspernatur quisquam ratione. Cum architecto iure commodi incidunt eligendi adipisci voluptatem, atque expedita nihil, quia laborum! ipsum dolor sit amet, consectetur adipisicing elit. Molestias ipsam quod, praesentium ab harum explicabo veritatis id? Itaque reprehenderit provident ea eaque magnam voluptas quas quia voluptatum iure nam. Culpa? Lorem</p>
-    <p> ipsum dolor sit amet, consectetur adipisicing elit. Molestias ipsam quod, praesentium ab harum explicabo veritatis id? Itaque reprehenderit provident ea eaque magnam voluptas quas quia voluptatum iure nam. Culpa? Lorem</p>
-    <p>Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate itaque iusto debitis id culpa optio, ut non architecto saepe error maxime odio, dolore neque obcaecati? Minima repudiandae distinctio a ea. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptatum incidunt nobis reprehenderit repellat error vel unde vitae voluptatibus facere voluptate aliquid architecto ipsum nisi, itaque natus veritatis amet iusto? consectetur adipisicing elit. Molestias ipsam quod, praesentium ab harum explicabo veritatis id? Itaque reprehenderit provident ea eaque magnam voluptas quas quia voluptatum iure nam. Culpa? Lorem</p>
-    <p>onsectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, facere, repellat veniam quas reiciendis cupiditate tempora quae tenetur, impedit in recusandae ut ex assumenda nisi fuga at odit quam! Quam. Molestias ipsam quod, praesentium ab harum explicabo veritatis id? Itaque reprehenderit provident ea eaque magnam voluptas quas quia voluptatum iure nam. Culpa? Lorem</p>
-    <p>olestias ipsam quod, praesentium ab harum explicabo veritatis id? Itaque reprehenderit provident ea eaque magnam voluptas quas quia voluptatum iure nam. Culpa? Lorem</p>
+    <h2>Registro de vehículos</h2>
+    <p>
+        Registro de vehículos, es la pantalla que todo taller/mecánico necesita para tener
+        siempre las documentaciones a mano, guardar las propias documentaciones, realizar
+        documentaciones propias mediante fotografías. Te permite configurar los modelos de
+        vehículos pensando en agilizar el trabajo de descripción de las reparaciones, para esto
+        está dividida en varias partes. 
+    </p>
+    <p>
+        En la parte superior encontramos un combo en el cual se puede seleccionar varios tipos
+        de vehículos, motocicletas quads y jets.
+    </p>
+    <p>
+        Lo primero que nos encontramos es la configuración de marcas, la cual nos permite
+        registrar nuevas marcas, adjuntar a cada marca su dirección de Internet y adjuntar el
+        catálogo general de la marca.
+    </p>
+    <p>
+        El siguiente registro a configurar es tipos de vehículos, aquí es donde podremos asignar
+        diferentes tipos, tales como, de carretera, custom, scooter, Racing, etc...
+    </p>
+    <p>
+        El siguiente parámetro a configurar es grupos de vehículos, este parámetro nos ayudará
+        a distinguir los diferentes modelos teniendo en cuenta el motor que llevan, sea de un
+        cilindro, de 2 cilindros, o más. Grupo de vehículos también nos ayudará para programar
+        los tiempos de las reparaciones dependiendo del grupo que pertenezca el vehículo.
+    </p>
+    <p>
+        Acto seguido nos encontramos con modelos, en el cual podemos seleccionar todos los
+        parámetros anteriormente descritos y el año de fabricación. En modelos mediante el
+        botón de la derecha configuraciones nos permite extender los datos sobre el modelo. por
+        ejemplo nos permite adjuntar el manual de usuario, el catálogo del vehículo, la ficha
+        técnica, también nos permite adjuntar el esquema eléctrico, el despiece del vehículo, así
+        como manuales de reparación, también nos deja adjuntar imágenes del vehículo o
+        imágenes del motor que nos pueden ayudar en el futuro a realizar las reparaciones.
+    </p>
 {% endblock %}
