Add content to template programa

--- a/templates/layout/programa.html.twig
+++ b/templates/layout/programa.html.twig
@@ -37,7 +37,42 @@
         </div>
         <div class="col-xs-10">
             {# Bloque donde se va a renderizar el HTML del programa especifico #}
-            {% block contenido %}{% endblock %}
+            {% block contenido %}
+                <p>Programa sencillo y rápido para la gestión de todos los trabajos realizados en nuestro taller de reparaciones de motos, ciclomotores, Jets y Quats.</p>
+
+                <p>El sistema de gestión de taller ha sido diseñado como una herramienta para nuestra gestión diaria, liberándonos de las cargas más pesadas, optimizando nuestros recursos y haciéndonos más productivos.</p> 
+                
+                <br />
+                <p>Posibilidad de insertar tu logotipo y datos del taller en facturas, albaranes, presupuestos, partes de trabajo y ordenes de reparaciones.</p>
+                
+                <br />
+                <p>Tenemos en cuenta la venta de accesorios y repuestos en tienda o fuera de reparación, que se hacen sin estar ligadas a un vehículo y en las cuales ni siquiera tomamos nota del nombre del comprador. Para estas situaciones tenemos el formulario de factura simplificada o tickets para generar este tipo de documentos, separándolo de las reparaciones.</p>
+
+                
+                <br />
+                <p>Ello conlleva una venta más ágil, con el consiguiente ahorro de tiempo, pero no se descuida el control. El seguimiento de las existencias (control de stock) se realiza de igual manera y en conjunción con los demás tipos de venta y los cobros se anotan y fiscalizan de forma automática. Finalmente, la impresión mediante impresora de tickets supone un ahorro de papel en casos en los que obviamente no es necesario imprimir un folio entero.</p>
+                
+                <br />
+                <p><strong>Lo mejor del programa</strong></p>
+
+                <p>Tendrás todos los datos de los vehículos que tengamos en nuestra base de datos. Los datos que puedes ver en infotaller.net estarán ya en las bases de datos de tu  programa. Cuando añadamos un vehículo, este se te añadirá a tu programa.</p>
+
+                <p>Te recordamos algunos de estos datos:</p>
+
+                <p>Despieces, Ficha técnica, esquemas eléctricos, manuales de reparación, etc..</p>
+
+                <br />
+                <p>Y porque no hablar del coste que te supone a ti!!, que realmente es lo que más te interesa. No hay precio por uso, ni por usuarios, ni por computadora, ni por datos de tráfico, ni por compra o alquiler. El único coste es por lo que tú guardas Mb/mes.</p>
+
+                <p><img src="/img/menu_programa/precio.png"></p>
+                
+                <br />
+                <p><strong>Precio</strong></p>
+
+                <p>El precio de 1000Mb es de $10/mes, te imaginas cuanto puedes guardar en un 1000Mb!!</p>
+
+                <p>Puedes almacenar tantos Mbs como quieras. Si solo as guardado 200Mb solo tendrás que pagar $2/mes.</p>
+            {% endblock %}
         </div>
     </div>
 
